--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <section id="services" class="section hidden">
             <h2>Our Services</h2>
             <ul>
-                <li><a href="#software-engineering" onclick="showSection('software-engineering')">Software Engineering</a></li>
+                <li><a href="#software-development" onclick="showSection('software-engineering')">Software Development</a></li>
                 <li><a href="#web-development" onclick="showSection('web-development')">Web Development</a></li>
                 <li><a href="#securing-networks" onclick="showSection('securing-networks')">Securing Networks</a></li>
                 <li><a href="#consulting" onclick="showSection('consulting')">Consulting</a></li>
             </ul>
         </section>
 
-        <section id="software-engineering" class="section hidden">
-            <h2>Software Engineering</h2>
-            <p>We offer comprehensive software engineering services including custom software development, maintenance, and support.</p>
-            <img src="/images/Technology.png" alt="Software Engineering">
+        <section id="software-development" class="section hidden">
+            <h2>Software Development</h2>
+            <p>We offer comprehensive software development services including custom software development, maintenance, and support.</p>
+            <img src="/images/Technology.png" alt="Software Development">
             <nav>
                 <a href="#web-development" onclick="showSection('web-development')">Next: Web Development</a>
             </nav>
@@ -62,9 +62,9 @@
         <section id="web-development" class="section hidden">
             <h2>Web Development</h2>
             <p>Our web development services include designing and developing responsive websites and web applications tailored to your business needs.</p>
-            <img src="path/to/web-development.jpg" alt="Web Development">
+            <img src="/images/web-development.jpg" alt="Web Development">
             <nav>
-                <a href="#software-engineering" onclick="showSection('software-engineering')">Previous: Software Engineering</a> | 
+                <a href="#software-development" onclick="showSection('software-development')">Previous: Software Development</a> | 
                 <a href="#securing-networks" onclick="showSection('securing-networks')">Next: Securing Networks</a>
             </nav>
         </section>
@@ -72,7 +72,7 @@
         <section id="securing-networks" class="section hidden">
             <h2>Securing Networks</h2>
             <p>We provide robust network security solutions to protect your business from cyber threats and ensure the integrity of your data.</p>
-            <img src="path/to/securing-networks.jpg" alt="Securing Networks">
+            <img src="/images/securing-networks.jpg" alt="Securing Networks">
             <nav>
                 <a href="#web-development" onclick="showSection('web-development')">Previous: Web Development</a> | 
                 <a href="#consulting" onclick="showSection('consulting')">Next: Consulting</a>
@@ -82,7 +82,7 @@
         <section id="consulting" class="section hidden">
             <h2>Consulting</h2>
             <p>Our consulting services help you strategize and implement effective IT solutions to meet your business goals.</p>
-            <img src="path/to/consulting.jpg" alt="Consulting">
+            <img src="/images/consulting.jpg" alt="Consulting">
             <nav>
                 <a href="#securing-networks" onclick="showSection('securing-networks')">Previous: Securing Networks</a>
             </nav>
