--- a/index.html
+++ b/index.html
@@ -173,12 +173,13 @@
                     </div>
                     <!-- Payment Forms will be dynamically inserted here -->
                     <div id="payment-info-container"></div>
-                    <!-- Navigation Buttons -->
-                    <div class="button-group">
-                        <button type="button" class="btn-primary" id="prevBtn" onclick="goToStep(1)">Previous</button>
-                        <button type="reset" class="btn-secondary">Reset</button>
-                    </div>
-                </div>
+
+                     <!-- Navigation Buttons -->
+    <div class="button-group">
+        <button type="button" class="btn-primary" id="prevBtn" onclick="goToStep(1)">Back</button>
+        <button type="reset" class="btn-primary">Reset</button>
+    </div>
+</div>
             </div>
         </section>
          
